--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Rubiks Cube with 3-Style</title>
+		<title>Rubiks Cube </title>
         <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
-			integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
+		<script src="js/three.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
