--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
+		<script src="js/cubie.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
