added scramble program

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<script src="js/scramble.js"></script>
 		<script src="js/three.js"></script>
 		<script src="js/cubie.js"></script>
 		<script src="js/main.js"></script>
