--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<button id="solve">Solve</button>
+		<button id="scramble">Scramble</button>
+		<script src="js/load.js"></script>
 		<script src="js/scramble.js"></script>
 		<script src="js/three.js"></script>
 		<script src="js/cubie.js"></script>
