added orbit controls and alg parser

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	<body>
 		<button id="solve">Solve</button>
 		<button id="scramble">Scramble</button>
+		<script src="js/three.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script src="js/load.js"></script>
 		<script src="js/scramble.js"></script>
-		<script src="js/three.js"></script>
 		<script src="js/cubie.js"></script>
 		<script src="js/main.js"></script>
 	</body>
